trunk/Archive2/bc/95d2e554155229/output
grep: /etc/dictionaries-common/words: No such file or directory
main.cpp:7:16: warning: alias declarations are a C++11 extension [-Wc++11-extensions]
using sref   = boost::string_ref;
               ^
main.cpp:12:59: error: expected expression
        static void call(It f, It l, sref& attr) { attr = { f, size_t(std::distance(f,l)) }; }
                                                          ^
main.cpp:42:9: warning: 'auto' type specifier is a C++11 extension [-Wc++11-extensions]
        auto& line = parsed[rand() % parsed.size()];
        ^
2 warnings and 1 error generated.
